增加垂直线

--- a/TableView/src/main/res/values/strings.xml
+++ b/TableView/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright © 2017 CHANGLEI. All rights reserved.
+  -->
+
 <resources>
     <string name="app_name">Widget</string>
 </resources>
