--- a/TableView/src/main/res/values/strings.xml
+++ b/TableView/src/main/res/values/strings.xml
@@ -1,7 +1,3 @@
-<!--
-  ~ Copyright © 2017 CHANGLEI. All rights reserved.
-  -->
-
 <resources>
-    <string name="app_name">Widget</string>
+    <string name="app_name">KotlinTest</string>
 </resources>
